--- a/index.html
+++ b/index.html
@@ -451,6 +451,21 @@
                         </button>
                     </div>
                 </div>
+                <!-- Card 11: chat bot -->
+                <div class="card">
+                    <div class="card-image">
+                        🤖🤖🧒
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Chat bot</h3>
+                        <p class="card-description">
+                            Habla con una computadora con respuestas predeterminados.
+                        </p>
+                        <a href="chatbot.html" class="downloadCode">
+                            ⬇ Descargar Código.py</a>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
