--- a/index.html
+++ b/index.html
@@ -466,6 +466,21 @@
                         </button>
                     </div>
                 </div>
+                <!-- Card 12:practica con texblod -->
+                <div class="card">
+                    <div class="card-image">
+                        🤖🤔💭🥹
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">chat de sentimiento</h3>
+                        <p class="card-description">
+                            platica con un chabot usando tus sentimientos para expresarse.
+                        </p>
+                        <a href="chat_sentimiento.html" class="downloadCode">
+                            ⬇ Descargar Código.py</a>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
