--- a/index.html
+++ b/index.html
@@ -481,6 +481,21 @@
                         </button>
                     </div>
                 </div>
+                <!-- Card 13: chat bot -->
+                <div class="card">
+                    <div class="card-image">
+                        🤖🧒
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Librerias de chatbots</h3>
+                        <p class="card-description">
+                            descubre cuantos tipos de chatbots hay
+                        </p>
+                        <a href="tipos_chatbots.html" class="downloadCode">
+                            ⬇ Descargar Código.py</a>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
