--- a/tipos_chatbots.html
+++ b/tipos_chatbots.html
@@ -62,6 +62,13 @@
     <section class="hero">
         <h1>Librerías de PNL para Chatbots</h1>
         <p>Trabajo realizado por: Cristian Eduardo Niños Molina</p>
+            <ul>
+                <li>SpaCy</li>
+                <li>NLTK</li>
+                <li>Stanford NLP</li>
+                <li>GPT-based NLP tools</li>
+                <li>Rasa NLU</li>
+            </ul>
     </section>
     <section class="catalogo">
         <a href=\"#\"><div class="card">
@@ -73,16 +80,35 @@
             <img src="https://via.placeholder.com/300x180" alt="Chatbots con IA">
             <h3>🤖 Chatbots con IA</h3>
             <p>Usan modelos avanzados para generar respuestas inteligentes y personalizadas.</p>
+            <ul>
+                <li>TensorFlow</li>
+                <li>PyTorch</li>
+                <li>OpenAI APIs</li>
+                <li>Hugging Face Transformers</li>
+                <li>Keras</li>
+            </ul></p>
         </div></a>
         <a href=\"#\"><div class="card">
             <img src="https://via.placeholder.com/300x180" alt="Chatbots conectados a plataformas">
             <h3>📱 Chatbots conectados a plataformas</h3>
             <p>Integrados con servicios como WhatsApp o Telegram para facilitar la comunicación.</p>
+            <ul>
+                <li>Twilio</li>
+                <li>Meta WhatsApp Cloud API</li>
+                <li>Telegram Bot API</li>
+                <li>Slack API</li>
+                <li>Microsoft Teams Bot Framework</li>
+            </ul></p>
         </div></a>
         <a href=\"#\"><div class="card">
             <img src="https://via.placeholder.com/300x180" alt="Chatbots en páginas web">
             <h3>🌐 Chatbots en páginas web</h3>
             <p>Asisten a visitantes en sitios web resolviendo dudas en tiempo real.</p>
+            <ul>
+                <li>Botpress</li>
+                <li>Dialogflow</li>
+                <li>Tidio</li>
+                <li>LiveChat AI</li></p>
         </div></a>
     </section>
 </body>
